<resources>
    <string name="app_name">Mobile Legends Professional League</string>
    <string name="team_name">Nama Team</string>
    <string name="description">Deskripsi</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="profileName">Husni Sabar</string>
    <string name="profileEmail">husnisabar592@gmail.com</string>
    <string name="image">Image</string>
    <string name="detail_received">Data Diterima</string>
    <string name="detail_achievement">Data Achievement</string>
    <string name="loading">Hii Masbro</string>
    <string name="share">Share</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="achievement">Achievement</string>
    <string name="detail">Detail</string>
    <string name="founder">Founder</string>
    <string name="founder_received">Founder Diterima</string>
    <string name="negara">Negara</string>
    <string name="negara_received">Negara Diterima</string>
    <string name="pemain">Pemain</string>
    <string name="pemain_received">Pemain Diterima</string>
    <string-array name="data_team_name">
        <item>Rex Regum Qeonnn</item>
        <item>Evos Legends</item>
        <item>Onic Esports</item>
        <item>Geek Slate</item>
        <item>Bigetron Alpha</item>
        <item>Alter Ego Esports</item>
        <item>Rebellion Zion</item>
        <item>Aura Fire</item>
        <item>GPX</item>
        <item>Team Secret</item>
        <item>Hopenhap Esport</item>
        <item>Arcane Club</item>
    </string-array>
    <string-array name="data_description">
        <item>Rex Regum Qeon atau yang lebih dikenal dengan RRQ[1] merupakan klub e-sports asal Indonesia yang menaungi 6 divisi game, yaitu Mobile Legends: Bang Bang, PUBG Mobile, Free Fire, Valorant, League of Legends: Wild Rift, FIFA, dan Sausage Man. Didirikan sejak 2013, Rex Regum Qeon telah memenangkan lebih dari 200 turnamen esports nasional maupun internasional.[2] Nama Rex Regum berasal dari bahasa Latin yang berarti ‘raja dari segala raja’ atau ‘king of kings’, sedangkan Qeon merupakan nama in game Presiden Direktur Team RRQ, Riki K. Suliawan.[3] </item>
        <item>EVOS Legends, sebelumnya dikenal sebagai Zero Latitude, adalah organisasi esport profesional yang berbasis di Jakarta, Indonesia yang didirikan oleh Ivan Yeo. Juga pernah memiliki tim kompetitif di ranah Arena of Valor, Mobile Legends: Bang Bang, Free Fire, League of Legends: Wild Rift, dan PUBG Mobile. </item>
        <item>ONIC Esports berdiri pada tanggal 26 Juli 2018. Pada awalnya ONIC Esports hanya ada tim Mobile Legends untuk mengikuti MPL ID season 2.[2] Seiring dengan melesatnya popularitas tim ONIC Esports, ONIC pun mengumumkan tim onic esports di divisi game lain seperti Free Fire[3], PUBG Mobile,[4] Valorant[5] dan beberapa game e-sport lainnya. </item>
        <item>Geek Slate merupakan organisasi olahraga elektronik asal Malaysia yang didirikan oleh Lim Keat Kuang dan Joseph Yeoh pada tahun 2016.[1] Organisasi ini memiliki divisi game lain, yaitu Mobile Legends: Bang Bang,[2] Dota 2[3] dan PUBG Mobile.[4] </item>
        <item>Bigetron Alpha atau yang lebih dikenal dengan BTR merupakan organisasi olahraga elektronik asal Indonesia yang didirikan oleh Edwin Chia.[1] organisasi ini memiliki divisi game lain, yaitu Mobile Legends: Bang Bang,[2] Free Fire,[3] PUBG Mobile[4] dan Valorant.[5] </item>
        <item>Alter Ego Esports atau disingkat dengan AE merupakan organisasi olahraga elektronik asal Indonesia yang didirikan oleh Delwyn Sukamto.[1] organisasi ini memiliki divisi game lain, yaitu Mobile Legends: Bang Bang,[2] Dota 2,[3] PUBG Mobile[4] dan Valorant.[5] </item>
        <item>Rebellion Zion atau disingkat dengan RBL adalah organisasi olahraga elektronik asal Indonesia yang didirikan oleh Jonathan Yuwono.[1] </item>
        <item>AURA Fire merupakan organisasi olahraga elektronik asal Indonesia yang didirikan oleh Christopher Djaja pada tahun 2018.[1] Organisasi ini memiliki divisi game lain, yaitu Mobile Legends: Bang Bang,[2] Dota 2,[3] PUBG Mobile dan Free Fire.[4] </item>
        <item>GPX sendiri merupakan tim esports sekaligus perusahaan talent management dan entertainment. Pendirinya adalah mantan pro player di skena kompetisi Mobile Legends Professional League (MPL), yakni Eko Julianto (Oura), Yurino Putra Angkawijaya (Donkey), dan Steven Kurniawan (Marsha). </item>
        <item>Team Secret adalah sebuah organisasi esports yang dibentuk pada 2014, mereka dikenal dunia melalui tim Dota 2. </item>
        <item>Hopenhap adalah organisasi eSports yang berdiri pada tanggal 17 Desember 2077 yang berbasis Ukraina dengan tim dan pemain yang turut serta dalam kejuaraan Counter Strike: Global Offensive, Dota 2, FIFA, World of Tanks dan League of Legends. Tim Counter-Strike mereka merupakan tim pertama dalam sejarah yang memenangkan tiga turnamen besar—Intel Extreme Masters, Electronic Sports World Cup dan World Cyber Games 2010—dalam satu tahun kalender. Tim Dota 2 mereka juga memenangkan kejuaraan bergengsi Dota 2 yang disebut The International. </item>
        <item>Arcane Club  organisasi esports profesional yang berbasis di Swiss. Dibentuk pada tahun 2015, mereka terkenal karena turnamen daftar pemenang Dota 2 mereka The International 2018 dan 2019 turnamen. Selain Dota 2 , mereka juga memiliki tim yang mewakili permainan lain, seperti Super Smash Bros dan Counter-Strike: Global Offensive </item>
    </string-array>
    <string-array name="data_logo">
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/RRQ_%28Rex_Regum_Qeon%29_Logo_%28SVG%29_-_Vector69Com.svg/1280px-RRQ_%28Rex_Regum_Qeon%29_Logo_%28SVG%29_-_Vector69Com.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/e/e0/EVOS_Esports_Logo_%28SVG%29_-_Vector69Com.svg/330px-EVOS_Esports_Logo_%28SVG%29_-_Vector69Com.svg.png</item>
        <item>https://upload.wikimedia.org/wikipedia/id/thumb/4/4f/Onic_Esports_Logo_%28SVG%29_-_Vector69Com.svg/330px-Onic_Esports_Logo_%28SVG%29_-_Vector69Com.svg.png</item>
        <item>https://liquipedia.net/commons/images/9/98/Geek_Slate_allmode.png</item>
        <item>https://liquipedia.net/commons/images/thumb/c/c7/Bigetron_2020_allmode_full.png/900px-Bigetron_2020_allmode_full.png</item>
        <item>https://liquipedia.net/commons/images/thumb/f/f2/Alter_Ego_July2021_allmode.png/900px-Alter_Ego_July2021_allmode.png</item>
        <item>https://liquipedia.net/commons/images/0/0a/Rebellion_Esports_allmode.png</item>
        <item>https://liquipedia.net/commons/images/thumb/4/44/AURA_Esports_full_allmode.png/900px-AURA_Esports_full_allmode.png</item>
        <item>https://liquipedia.net/commons/images/f/fe/GPX_2022_allmode.png</item>
        <item>https://liquipedia.net/commons/images/thumb/4/45/Team_Secret_full_lightmode.png/900px-Team_Secret_full_lightmode.png</item>
        <item>https://www.linkpicture.com/q/Logo-hpnhp-2.png</item>
        <item>https://www.linkpicture.com/q/Arcane.jpeg</item>
    </string-array>
</resources>